--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "node ./dist/index.test.js",
     "start": "node ./dist/index.js",
     "prettier": "npx prettier --cache --write .",
-    "eslint": "npx eslint **/*.js --fix",
+    "eslint": "npx eslint src/*.ts --fix",
     "tsc": "npx tsc --build",
     "tsc-watch": "npx tsc --watch",
     "build": "npm run tsc && npm run eslint && npm run prettier"
@@ -21,15 +21,14 @@
   "license": "MIT",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.5.0",
-    "@types/node": "^20.14.2",
-    "eslint": "^9.5.0",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsdoc": "^48.2.12",
-    "eslint-plugin-prettier": "^5.1.3",
-    "globals": "^15.4.0",
-    "prettier": "3.3.2",
-    "typescript": "^5.4.5"
+    "eslint-plugin-jsdoc": "^48.1.0",
+    "prettier": "3.2.4",
+    "typescript": "^5.3.3"
   },
   "types": "./types/index.d.ts"
 }
